--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .car-card { background: white; border-radius: 20px; padding: 24px; margin-bottom: 16px; box-shadow: 0 2px 20px rgba(0,0,0,0.08); position: relative; }
         .car-header { margin-bottom: 20px; padding-bottom: 16px; border-bottom: 1px solid #e8ebed; }
         .car-name { font-size: 22px; font-weight: 600; color: #2d3436; }
-        .car-year, .car-license { color: #b2bec3; font-size: 16px; margin-right: 8px; }
+        .car-year, .car-license { color: #b2bec3; font-size: 14px; margin-right: 8px; }
         
         .info-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 16px; }
         .info-item { background: #f8f9fa; padding: 10px; border-radius: 12px; }
@@ -53,12 +53,19 @@
         .modal { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(45, 52, 54, 0.8); z-index: 1000; padding: 20px; overflow-y: auto; }
         .modal.active { display: flex; align-items: center; justify-content: center; }
         .modal-content { background: white; border-radius: 20px; padding: 28px; max-width: 500px; width: 100%; max-height: 90vh; overflow-y: auto; box-shadow: 0 10px 40px rgba(0,0,0,0.2); position: relative; }
+        
+        @media (max-width: 600px) {
+            .modal-content { padding: 20px; }
+            .form-input { font-size: 16px; } /* Prevents zoom on iOS */
+            .form-input[type="date"] { font-size: 14px; padding: 6px; }
+        }
         .modal-header { font-size: 24px; font-weight: 600; color: #2d3436; margin-bottom: 24px; }
         .modal-close { position: absolute; top: 20px; left: 20px; background: none; border: none; font-size: 28px; color: #636e72; cursor: pointer; padding: 0; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; }
         .modal-close:hover { color: #2d3436; }
         .form-group { margin-bottom: 18px; }
         .form-label { display: block; font-weight: 600; margin-bottom: 8px; color: #2d3436; font-size: 14px; }
-        .form-input { width: 100%; padding: 12px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 16px; direction: rtl; }
+        .form-input { width: 100%; padding: 10px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; }
+        .form-input[type="date"] { padding: 8px; font-size: 14px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
         .modal-buttons { display: flex; gap: 12px; margin-top: 28px; }
         .btn-save { flex: 1; background: #74b9b9; color: white; border: none; padding: 14px; border-radius: 12px; font-size: 16px; font-weight: 600; cursor: pointer; }
