--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         @media (max-width: 600px) {
             .modal-content { padding: 20px; }
             .form-input { font-size: 16px; } /* Prevents zoom on iOS */
-            .form-input[type="date"] { font-size: 14px; padding: 6px; }
+            .form-input[type="date"] { font-size: 12px; padding: 8px 4px; max-width: 100%; }
         }
         .modal-header { font-size: 24px; font-weight: 600; color: #2d3436; margin-bottom: 24px; }
         .modal-close { position: absolute; top: 20px; left: 20px; background: none; border: none; font-size: 28px; color: #636e72; cursor: pointer; padding: 0; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; }
@@ -65,7 +65,7 @@
         .form-group { margin-bottom: 18px; }
         .form-label { display: block; font-weight: 600; margin-bottom: 8px; color: #2d3436; font-size: 14px; }
         .form-input { width: 100%; padding: 10px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; }
-        .form-input[type="date"] { padding: 8px; font-size: 14px; }
+        .form-input[type="date"] { padding: 8px 6px; font-size: 13px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
         .modal-buttons { display: flex; gap: 12px; margin-top: 28px; }
         .btn-save { flex: 1; background: #74b9b9; color: white; border: none; padding: 14px; border-radius: 12px; font-size: 16px; font-weight: 600; cursor: pointer; }
