--- a/index.html
+++ b/index.html
@@ -55,15 +55,21 @@
         .modal-content { background: white; border-radius: 20px; padding: 28px; max-width: 500px; width: 100%; max-height: 90vh; overflow-y: auto; box-shadow: 0 10px 40px rgba(0,0,0,0.2); position: relative; }
         
         @media (max-width: 600px) {
-            .modal-content { padding: 20px; }
+            .modal-content { padding: 16px; }
+            .modal { padding: 10px; }
             .form-input { font-size: 16px; } /* Prevents zoom on iOS */
-            .form-input[type="date"] { font-size: 12px; padding: 8px 4px; max-width: 100%; }
+            .form-input[type="date"] { font-size: 11px; padding: 6px 2px; width: 100%; box-sizing: border-box; }
+            .form-group { margin-bottom: 14px; }
         }
         .modal-header { font-size: 24px; font-weight: 600; color: #2d3436; margin-bottom: 24px; }
         .modal-close { position: absolute; top: 20px; left: 20px; background: none; border: none; font-size: 28px; color: #636e72; cursor: pointer; padding: 0; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; }
         .modal-close:hover { color: #2d3436; }
         .form-group { margin-bottom: 18px; }
         .form-label { display: block; font-weight: 600; margin-bottom: 8px; color: #2d3436; font-size: 14px; }
+        
+        @media (max-width: 600px) {
+            .form-label { font-size: 13px; margin-bottom: 6px; }
+        }
         .form-input { width: 100%; padding: 10px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; }
         .form-input[type="date"] { padding: 8px 6px; font-size: 13px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
