--- a/index.html
+++ b/index.html
@@ -55,11 +55,19 @@
         .modal-content { background: white; border-radius: 20px; padding: 28px; max-width: 500px; width: 100%; max-height: 90vh; overflow-y: auto; box-shadow: 0 10px 40px rgba(0,0,0,0.2); position: relative; }
         
         @media (max-width: 600px) {
-            .modal-content { padding: 16px; }
+            .modal-content { padding: 12px; max-width: calc(100vw - 20px); }
             .modal { padding: 10px; }
             .form-input { font-size: 16px; } /* Prevents zoom on iOS */
-            .form-input[type="date"] { font-size: 11px; padding: 6px 2px; width: 100%; box-sizing: border-box; }
-            .form-group { margin-bottom: 14px; }
+            .form-input[type="date"] { 
+                font-size: 10px; 
+                padding: 4px 1px; 
+                width: 100%; 
+                box-sizing: border-box;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+            }
+            .form-group { margin-bottom: 12px; }
+            .modal-header { font-size: 20px; margin-bottom: 16px; }
         }
         .modal-header { font-size: 24px; font-weight: 600; color: #2d3436; margin-bottom: 24px; }
         .modal-close { position: absolute; top: 20px; left: 20px; background: none; border: none; font-size: 28px; color: #636e72; cursor: pointer; padding: 0; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; }
@@ -71,7 +79,7 @@
             .form-label { font-size: 13px; margin-bottom: 6px; }
         }
         .form-input { width: 100%; padding: 10px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; }
-        .form-input[type="date"] { padding: 8px 6px; font-size: 13px; }
+        .form-input[type="date"] { padding: 6px 4px; font-size: 13px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
         .modal-buttons { display: flex; gap: 12px; margin-top: 28px; }
         .btn-save { flex: 1; background: #74b9b9; color: white; border: none; padding: 14px; border-radius: 12px; font-size: 16px; font-weight: 600; cursor: pointer; }
