--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         .modal-header { font-size: 24px; font-weight: 600; color: #2d3436; padding: 24px 28px; border-bottom: 2px solid #e8ebed; position: sticky; top: 0; background: white; z-index: 10; border-radius: 20px 20px 0 0; }
         .modal-body { padding: 0; overflow-y: auto; flex: 1; }
         .modal-section { padding: 24px 28px; }
-        .modal-section:nth-child(odd) { background: #f8f9fa; }
+        .modal-section:nth-child(odd) { background: #e8ebed; }
         .modal-section:nth-child(even) { background: white; }
         .section-title { font-size: 16px; font-weight: 600; color: #74b9b9; margin-bottom: 16px; }
         
