--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         @media (max-width: 600px) {
             .form-label { font-size: 13px; margin-bottom: 6px; }
         }
-        .form-input { width: 100%; padding: 10px; border: 2px solid #e8ebed; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; }
+        .form-input { width: 100%; padding: 10px; border: 2px solid #dfe6e9; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; background: white; }
         .form-input[type="date"] { padding: 6px 4px; font-size: 13px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
         .modal-buttons { display: flex; gap: 12px; margin-top: 28px; padding: 0 28px 28px 28px; }
