--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         .form-input { width: 100%; padding: 10px; border: 2px solid #dfe6e9; border-radius: 12px; font-size: 14px; direction: rtl; text-align: right; background: white; }
         .form-input[type="date"] { padding: 6px 4px; font-size: 13px; }
         .form-input:focus { outline: none; border-color: #74b9b9; }
-        .modal-buttons { display: flex; gap: 12px; margin-top: 28px; padding: 0 28px 28px 28px; }
+        .modal-buttons { display: flex; gap: 12px; margin-top: 28px; padding: 24px 28px; background: white; position: sticky; bottom: 0; border-top: 2px solid #e8ebed; }
         .btn-save { flex: 1; background: #74b9b9; color: white; border: none; padding: 12px; border-radius: 12px; font-size: 14px; font-weight: 600; cursor: pointer; }
         .btn-save:hover { background: #5fa3a3; }
         .btn-cancel { flex: 1; background: #dfe6e9; color: #2d3436; border: none; padding: 12px; border-radius: 12px; font-size: 14px; font-weight: 600; cursor: pointer; }
